--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Etch-A-Sketch</h1>
-    <button>Clear</button>
+    <button id="clearBtn">Clear</button>
     <div id="container" class="container"></div>
 
 </body>
