add grid-resize function
empty existing grid and get new user input;
fix square size behaviour;

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Etch-A-Sketch</h1>
+    <button id="newGrid">New Grid</button>
     <button id="clearBtn">Clear</button>
     <div id="container" class="container"></div>
 
